--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
+      <img class="logo-center" src="../images/Contact2.png" style='width:250px; height:250px; text-align: center; '>
       <p>Create an account or login</p>
       <a href="/users/register" class="btn btn-primary btn-block mb-2"
         >Register</a
@@ -9,3 +10,5 @@
     </div>
   </div>
 </div>
+
+
