--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,7 +19,11 @@
             rel="stylesheet"
             href="https://bootswatch.com/5/quartz/bootstrap.min.css" 
         />
-        
+        <link 
+            rel='stylesheet'
+            href='/stylesheets/style.css'
+        />
+        <link rel="icon" href="../images/Contact2.png" type="image/gif" sizes="16x16">
     </head>
     <body>
         <div class="container">
