--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,9 @@
         <h1 class="text-center mb-3">
           <i class="fas fa-user-plus"></i> Register
         </h1>
+        
         <form action="/users/register" method="POST">
+          <%- include ('./partials/messages') %>
           <div class="form-group">
             <label for="name">Name</label>
             <input
