--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,50 +6,53 @@
             <h1 class="text-center mb-3">Contact Form</h1>
             <%- include ('./partials/messages') %>
 
-            <form action="/dashboard" method="POST">
-                <div class="form-group">
-                    <label for="first_name"> Add First Name</label>
-                    <input
-                        type="name"
-                        id="first_name"
-                        1
-                        name="first_name"
-                        class="form-control"
-                        placeholder="Enter First name"
-                        value="<%= typeof name != 'undefined' ? name : '' %>"
-                    />
-                </div>
-                <div class="form-group">
-                    <label for="last_name"> Add Last Name</label>
-                    <input
-                        type="last_name"
-                        id="last_name"
-                        1
-                        name="last_name"
-                        class="form-control"
-                        placeholder="Enter Last Name"
-                        value="<%= typeof name != 'undefined' ? name : '' %>"
-                    />
-                </div>
-                <div class="form-group">
-                    <label for="number">Number</label>
-                    <input
-                        type="number"
-                        id="number"
-                        name="number"
-                        class="form-control"
-                        placeholder="Enter Number"
-                        value="<%= typeof number != 'undefined' ? number : '' %>"
-                    />
-                </div>
-
-                <button type="submit" class="btn btn-primary btn-block">
-                    Add
-                </button>
-            </form>
-            <p class="lead mt-4">
-                Wanna logout? <a href="/users/logout">Logout</a>
-            </p>
-        </div>
+        <form action="/dashboard" method="POST">
+          <div class="form-group">
+            <label for="first_name"> Add First Name</label>
+            <input
+              type="name"
+              id="first_name"1
+              name="first_name"
+              class="form-control"
+              placeholder="Enter First name"
+              value="<%= typeof name != 'undefined' ? name : '' %>"
+            />
+          </div>
+          <div class="form-group">
+            <label for="last_name"> Add Last Name</label>
+            <input
+              type="last_name"
+              id="last_name"1
+              name="last_name"
+              class="form-control"
+              placeholder="Enter Last Name"
+              value="<%= typeof name != 'undefined' ? name : '' %>"
+            />
+          </div>
+          <div class="form-group">
+            <label for="number">Number</label>
+            <input
+              type="number"
+              id="number"
+              name="number"
+              class="form-control"
+              placeholder="Enter Number"
+              value="<%= typeof number != 'undefined' ? number : '' %>"
+            />
+          </div>
+          
+          <button type="submit" class="btn btn-primary btn-block">
+            Add
+          </button>
+          
+        </form>
+        <br>
+        <form action="/viewall" method="GET">
+          <button type="submit" class="btn btn-secondary btn-block">
+            View All
+          </button>
+        </form>
+        <p class="lead mt-4">Wanna logout? <a href="/users/logout">Logout</a></p>
+      </div>
     </div>
 </div>
