--- a/views/viewall.ejs
+++ b/views/viewall.ejs
@@ -35,7 +35,7 @@
                     </form>
                     </td>
                     <td>
-                   <form  action='/delete<%= item._id %>' method="DELETE">
+                   <form  action='/delete/<%= item._id %>' method="GET">
                       <button type="submit" class="btn btn-secondary btn-block">
                         Delete
                       </button>
