--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,4 @@
-<h1 class="mt-4">Edittig contact <%= data.first_name %></h1>
+<h1 class="mt-4">Edittig contact <%= data.first_name%></h1>
 
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
@@ -14,7 +14,7 @@
               id="first_name"1
               name="first_name"
               class="form-control"
-              placeholder="Enter First name"
+              placeholder= " .."
               value="<%= typeof name != 'undefined' ? name : '' %>"
             />
           </div>
