--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,4 @@
-<h1 class="mt-4">Edittig contact <%= data.first_name%></h1>
+<h1 class="mt-4">Editting contact <%= first_name%></h1>
 
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
@@ -6,53 +6,58 @@
             <h1 class="text-center mb-3">Edit Contact</h1>
             <%- include ('./partials/messages') %>
 
-        <form action="/edit" method="POST">
-          <div class="form-group">
-            <label for="first_name"> Add First Name</label>
-            <input
-              type="name"
-              id="first_name"1
-              name="first_name"
-              class="form-control"
-              placeholder= " .."
-              value="<%= typeof name != 'undefined' ? name : '' %>"
-            />
-          </div>
-          <div class="form-group">
-            <label for="last_name"> Add Last Name</label>
-            <input
-              type="last_name"
-              id="last_name"1
-              name="last_name"
-              class="form-control"
-              placeholder="Enter Last Name"
-              value="<%= typeof name != 'undefined' ? name : '' %>"
-            />
-          </div>
-          <div class="form-group">
-            <label for="number">Number</label>
-            <input
-              type="number"
-              id="number"
-              name="number"
-              class="form-control"
-              placeholder="Enter Number"
-              value="<%= typeof number != 'undefined' ? number : '' %>"
-            />
-          </div>
-          
-          <button type="submit" class="btn btn-primary btn-block">
-            Add
-          </button>
-          
-        </form>
-        <br>
-        <form action="/dashboard" method="GET">
-          <button type="submit" class="btn btn-secondary btn-block">
-            Back
-          </button>
-        </form>
-        <p class="lead mt-4">Wanna logout? <a href="/users/logout">Logout</a></p>
-      </div>
+            <form action="/edit" method="POST">
+                <div class="form-group">
+                    <label for="first_name"> Add First Name</label>
+                    <input
+                        type="name"
+                        id="first_name"
+                        1
+                        name="first_name"
+                        class="form-control"
+                        placeholder=" .."
+                        <!--
+                        value="<%= typeof first_name != 'undefined' ? first_name : '' %>"
+                        --
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="last_name"> Add Last Name</label>
+                    <input
+                        type="last_name"
+                        id="last_name"
+                        1
+                        name="last_name"
+                        class="form-control"
+                        placeholder="Enter Last Name"
+                        value="<%= typeof last_name != 'undefined' ? last_name : '' %>"
+                    />
+                </div>
+                <div class="form-group">
+                    <label for="number">Number</label>
+                    <input
+                        type="number"
+                        id="number"
+                        name="number"
+                        class="form-control"
+                        placeholder="Enter Number"
+                        value="<%= typeof number != 'undefined' ? number : '' %>"
+                    />
+                </div>
+
+                <button type="submit" class="btn btn-primary btn-block">
+                    Update
+                </button>
+            </form>
+            <br />
+            <form action="/dashboard" method="GET">
+                <button type="submit" class="btn btn-secondary btn-block">
+                    Back
+                </button>
+            </form>
+            <p class="lead mt-4">
+                Wanna logout? <a href="/users/logout">Logout</a>
+            </p>
+        </div>
     </div>
 </div>
