--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,7 @@
             <label for="first_name"> Add First Name</label>
             <input
               type="name"
-              id="first_name"1
+              id="first_name"
               name="first_name"
               class="form-control"
               placeholder="Enter First name"
